// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throwing not Error objects 1`] = `
Object {
  "rest": " FAIL  __tests__/throw-number-test.js
  ● Test suite failed to run

    Expected an Error, but \\"1\\" was thrown

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-number-test.js\\".
",
}
`;

exports[`throwing not Error objects 2`] = `
Object {
  "rest": " FAIL  __tests__/throw-string-test.js
  ● Test suite failed to run

    Error
      banana

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-string-test.js\\".
",
}
`;

exports[`throwing not Error objects 3`] = `
Object {
  "rest": " FAIL  __tests__/throw-object-test.js
  ● Test suite failed to run

    Error: No message was provided

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-object-test.js\\".
",
}
`;

exports[`throwing not Error objects 4`] = `
Object {
  "rest": " FAIL  __tests__/assertion-count-test.js
  ● .assertions() › throws

    expect(received).toBeTruthy()
    
    Expected value to be truthy, instead received
      false
      
      at Object.throws (__tests__/assertion-count-test.js:14:17)

  ● .assertions() › throws

    expect.assertions(2)
    
    Expected two assertions to be called but only received one assertion call.
      
      at addAssertionErrors (../../packages/jest-jasmine2/build/setup-jest-globals.js:56:21)

  ● .assertions() › throws on redeclare of assertion count

    expect(received).toBeTruthy()
    
    Expected value to be truthy, instead received
      false
      
      at Object.redeclare (__tests__/assertion-count-test.js:18:17)

  ● .assertions() › throws on assertion

    expect.assertions(0)
    
    Expected zero assertions to be called but only received one assertion call.
      
      at addAssertionErrors (../../packages/jest-jasmine2/build/setup-jest-globals.js:56:21)

  .assertions()
    ✕ throws
    ✕ throws on redeclare of assertion count
    ✕ throws on assertion

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"assertion-count-test.js\\".
",
}
`;
